docs/upbound-provider-azure/1.3/insights/v1beta1/applicationInsightsStandardWebTest.md
---
permalink: /upbound-provider-azure/1.3/insights/v1beta1/applicationInsightsStandardWebTest/
---

# insights.v1beta1.applicationInsightsStandardWebTest

"ApplicationInsightsStandardWebTest is the Schema for the ApplicationInsightsStandardWebTests API. Manages a Application Insights Standard WebTest."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withApplicationInsightsId(applicationInsightsId)`](#fn-specforproviderwithapplicationinsightsid)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withEnabled(enabled)`](#fn-specforproviderwithenabled)
    * [`fn withFrequency(frequency)`](#fn-specforproviderwithfrequency)
    * [`fn withGeoLocations(geoLocations)`](#fn-specforproviderwithgeolocations)
    * [`fn withGeoLocationsMixin(geoLocations)`](#fn-specforproviderwithgeolocationsmixin)
    * [`fn withLocation(location)`](#fn-specforproviderwithlocation)
    * [`fn withRequest(request)`](#fn-specforproviderwithrequest)
    * [`fn withRequestMixin(request)`](#fn-specforproviderwithrequestmixin)
    * [`fn withResourceGroupName(resourceGroupName)`](#fn-specforproviderwithresourcegroupname)
    * [`fn withRetryEnabled(retryEnabled)`](#fn-specforproviderwithretryenabled)
    * [`fn withTags(tags)`](#fn-specforproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specforproviderwithtagsmixin)
    * [`fn withTimeout(timeout)`](#fn-specforproviderwithtimeout)
    * [`fn withValidationRules(validationRules)`](#fn-specforproviderwithvalidationrules)
    * [`fn withValidationRulesMixin(validationRules)`](#fn-specforproviderwithvalidationrulesmixin)
    * [`obj spec.forProvider.applicationInsightsIdRef`](#obj-specforproviderapplicationinsightsidref)
      * [`fn withName(name)`](#fn-specforproviderapplicationinsightsidrefwithname)
      * [`obj spec.forProvider.applicationInsightsIdRef.policy`](#obj-specforproviderapplicationinsightsidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderapplicationinsightsidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderapplicationinsightsidrefpolicywithresolve)
    * [`obj spec.forProvider.applicationInsightsIdSelector`](#obj-specforproviderapplicationinsightsidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderapplicationinsightsidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderapplicationinsightsidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderapplicationinsightsidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.applicationInsightsIdSelector.policy`](#obj-specforproviderapplicationinsightsidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderapplicationinsightsidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderapplicationinsightsidselectorpolicywithresolve)
    * [`obj spec.forProvider.request`](#obj-specforproviderrequest)
      * [`fn withBody(body)`](#fn-specforproviderrequestwithbody)
      * [`fn withFollowRedirectsEnabled(followRedirectsEnabled)`](#fn-specforproviderrequestwithfollowredirectsenabled)
      * [`fn withHeader(header)`](#fn-specforproviderrequestwithheader)
      * [`fn withHeaderMixin(header)`](#fn-specforproviderrequestwithheadermixin)
      * [`fn withHttpVerb(httpVerb)`](#fn-specforproviderrequestwithhttpverb)
      * [`fn withParseDependentRequestsEnabled(parseDependentRequestsEnabled)`](#fn-specforproviderrequestwithparsedependentrequestsenabled)
      * [`fn withUrl(url)`](#fn-specforproviderrequestwithurl)
      * [`obj spec.forProvider.request.header`](#obj-specforproviderrequestheader)
        * [`fn withName(name)`](#fn-specforproviderrequestheaderwithname)
        * [`fn withValue(value)`](#fn-specforproviderrequestheaderwithvalue)
    * [`obj spec.forProvider.resourceGroupNameRef`](#obj-specforproviderresourcegroupnameref)
      * [`fn withName(name)`](#fn-specforproviderresourcegroupnamerefwithname)
      * [`obj spec.forProvider.resourceGroupNameRef.policy`](#obj-specforproviderresourcegroupnamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnamerefpolicywithresolve)
    * [`obj spec.forProvider.resourceGroupNameSelector`](#obj-specforproviderresourcegroupnameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderresourcegroupnameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.resourceGroupNameSelector.policy`](#obj-specforproviderresourcegroupnameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolve)
    * [`obj spec.forProvider.validationRules`](#obj-specforprovidervalidationrules)
      * [`fn withContent(content)`](#fn-specforprovidervalidationruleswithcontent)
      * [`fn withContentMixin(content)`](#fn-specforprovidervalidationruleswithcontentmixin)
      * [`fn withExpectedStatusCode(expectedStatusCode)`](#fn-specforprovidervalidationruleswithexpectedstatuscode)
      * [`fn withSslCertRemainingLifetime(sslCertRemainingLifetime)`](#fn-specforprovidervalidationruleswithsslcertremaininglifetime)
      * [`fn withSslCheckEnabled(sslCheckEnabled)`](#fn-specforprovidervalidationruleswithsslcheckenabled)
      * [`obj spec.forProvider.validationRules.content`](#obj-specforprovidervalidationrulescontent)
        * [`fn withContentMatch(contentMatch)`](#fn-specforprovidervalidationrulescontentwithcontentmatch)
        * [`fn withIgnoreCase(ignoreCase)`](#fn-specforprovidervalidationrulescontentwithignorecase)
        * [`fn withPassIfTextFound(passIfTextFound)`](#fn-specforprovidervalidationrulescontentwithpassiftextfound)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withApplicationInsightsId(applicationInsightsId)`](#fn-specinitproviderwithapplicationinsightsid)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withEnabled(enabled)`](#fn-specinitproviderwithenabled)
    * [`fn withFrequency(frequency)`](#fn-specinitproviderwithfrequency)
    * [`fn withGeoLocations(geoLocations)`](#fn-specinitproviderwithgeolocations)
    * [`fn withGeoLocationsMixin(geoLocations)`](#fn-specinitproviderwithgeolocationsmixin)
    * [`fn withLocation(location)`](#fn-specinitproviderwithlocation)
    * [`fn withRequest(request)`](#fn-specinitproviderwithrequest)
    * [`fn withRequestMixin(request)`](#fn-specinitproviderwithrequestmixin)
    * [`fn withRetryEnabled(retryEnabled)`](#fn-specinitproviderwithretryenabled)
    * [`fn withTags(tags)`](#fn-specinitproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specinitproviderwithtagsmixin)
    * [`fn withTimeout(timeout)`](#fn-specinitproviderwithtimeout)
    * [`fn withValidationRules(validationRules)`](#fn-specinitproviderwithvalidationrules)
    * [`fn withValidationRulesMixin(validationRules)`](#fn-specinitproviderwithvalidationrulesmixin)
    * [`obj spec.initProvider.applicationInsightsIdRef`](#obj-specinitproviderapplicationinsightsidref)
      * [`fn withName(name)`](#fn-specinitproviderapplicationinsightsidrefwithname)
      * [`obj spec.initProvider.applicationInsightsIdRef.policy`](#obj-specinitproviderapplicationinsightsidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderapplicationinsightsidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderapplicationinsightsidrefpolicywithresolve)
    * [`obj spec.initProvider.applicationInsightsIdSelector`](#obj-specinitproviderapplicationinsightsidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderapplicationinsightsidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderapplicationinsightsidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderapplicationinsightsidselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.applicationInsightsIdSelector.policy`](#obj-specinitproviderapplicationinsightsidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderapplicationinsightsidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderapplicationinsightsidselectorpolicywithresolve)
    * [`obj spec.initProvider.request`](#obj-specinitproviderrequest)
      * [`fn withBody(body)`](#fn-specinitproviderrequestwithbody)
      * [`fn withFollowRedirectsEnabled(followRedirectsEnabled)`](#fn-specinitproviderrequestwithfollowredirectsenabled)
      * [`fn withHeader(header)`](#fn-specinitproviderrequestwithheader)
      * [`fn withHeaderMixin(header)`](#fn-specinitproviderrequestwithheadermixin)
      * [`fn withHttpVerb(httpVerb)`](#fn-specinitproviderrequestwithhttpverb)
      * [`fn withParseDependentRequestsEnabled(parseDependentRequestsEnabled)`](#fn-specinitproviderrequestwithparsedependentrequestsenabled)
      * [`fn withUrl(url)`](#fn-specinitproviderrequestwithurl)
      * [`obj spec.initProvider.request.header`](#obj-specinitproviderrequestheader)
        * [`fn withName(name)`](#fn-specinitproviderrequestheaderwithname)
        * [`fn withValue(value)`](#fn-specinitproviderrequestheaderwithvalue)
    * [`obj spec.initProvider.validationRules`](#obj-specinitprovidervalidationrules)
      * [`fn withContent(content)`](#fn-specinitprovidervalidationruleswithcontent)
      * [`fn withContentMixin(content)`](#fn-specinitprovidervalidationruleswithcontentmixin)
      * [`fn withExpectedStatusCode(expectedStatusCode)`](#fn-specinitprovidervalidationruleswithexpectedstatuscode)
      * [`fn withSslCertRemainingLifetime(sslCertRemainingLifetime)`](#fn-specinitprovidervalidationruleswithsslcertremaininglifetime)
      * [`fn withSslCheckEnabled(sslCheckEnabled)`](#fn-specinitprovidervalidationruleswithsslcheckenabled)
      * [`obj spec.initProvider.validationRules.content`](#obj-specinitprovidervalidationrulescontent)
        * [`fn withContentMatch(contentMatch)`](#fn-specinitprovidervalidationrulescontentwithcontentmatch)
        * [`fn withIgnoreCase(ignoreCase)`](#fn-specinitprovidervalidationrulescontentwithignorecase)
        * [`fn withPassIfTextFound(passIfTextFound)`](#fn-specinitprovidervalidationrulescontentwithpassiftextfound)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of ApplicationInsightsStandardWebTest

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ApplicationInsightsStandardWebTestSpec defines the desired state of ApplicationInsightsStandardWebTest"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withApplicationInsightsId

```ts
withApplicationInsightsId(applicationInsightsId)
```

"The ID of the Application Insights instance on which the WebTest operates. Changing this forces a new Application Insights Standard WebTest to be created."

### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"Purpose/user defined descriptive test for this WebTest."

### fn spec.forProvider.withEnabled

```ts
withEnabled(enabled)
```

"Should the WebTest be enabled?"

### fn spec.forProvider.withFrequency

```ts
withFrequency(frequency)
```

"Interval in seconds between test runs for this WebTest. Valid options are 300, 600 and 900. Defaults to 300."

### fn spec.forProvider.withGeoLocations

```ts
withGeoLocations(geoLocations)
```

"Specifies a list of where to physically run the tests from to give global coverage for accessibility of your application."

### fn spec.forProvider.withGeoLocationsMixin

```ts
withGeoLocationsMixin(geoLocations)
```

"Specifies a list of where to physically run the tests from to give global coverage for accessibility of your application."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withLocation

```ts
withLocation(location)
```

"The Azure Region where the Application Insights Standard WebTest should exist. Changing this forces a new Application Insights Standard WebTest to be created. It needs to correlate with location of the parent resource (azurerm_application_insights)"

### fn spec.forProvider.withRequest

```ts
withRequest(request)
```

"A request block as defined below."

### fn spec.forProvider.withRequestMixin

```ts
withRequestMixin(request)
```

"A request block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withResourceGroupName

```ts
withResourceGroupName(resourceGroupName)
```

"The name of the Resource Group where the Application Insights Standard WebTest should exist. Changing this forces a new Application Insights Standard WebTest to be created."

### fn spec.forProvider.withRetryEnabled

```ts
withRetryEnabled(retryEnabled)
```

"Should the retry on WebTest failure be enabled?"

### fn spec.forProvider.withTags

```ts
withTags(tags)
```

"A mapping of tags which should be assigned to the Application Insights Standard WebTest."

### fn spec.forProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"A mapping of tags which should be assigned to the Application Insights Standard WebTest."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withTimeout

```ts
withTimeout(timeout)
```

"Seconds until this WebTest will timeout and fail. Default is 30."

### fn spec.forProvider.withValidationRules

```ts
withValidationRules(validationRules)
```

"A validation_rules block as defined below."

### fn spec.forProvider.withValidationRulesMixin

```ts
withValidationRulesMixin(validationRules)
```

"A validation_rules block as defined below."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.applicationInsightsIdRef

"Reference to a ApplicationInsights in insights to populate applicationInsightsId."

### fn spec.forProvider.applicationInsightsIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.applicationInsightsIdRef.policy

"Policies for referencing."

### fn spec.forProvider.applicationInsightsIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.applicationInsightsIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.applicationInsightsIdSelector

"Selector for a ApplicationInsights in insights to populate applicationInsightsId."

### fn spec.forProvider.applicationInsightsIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.applicationInsightsIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.applicationInsightsIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.applicationInsightsIdSelector.policy

"Policies for selection."

### fn spec.forProvider.applicationInsightsIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.applicationInsightsIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.request

"A request block as defined below."

### fn spec.forProvider.request.withBody

```ts
withBody(body)
```

"The WebTest request body."

### fn spec.forProvider.request.withFollowRedirectsEnabled

```ts
withFollowRedirectsEnabled(followRedirectsEnabled)
```

"Should the following of redirects be enabled? Defaults to true."

### fn spec.forProvider.request.withHeader

```ts
withHeader(header)
```

"One or more header blocks as defined above."

### fn spec.forProvider.request.withHeaderMixin

```ts
withHeaderMixin(header)
```

"One or more header blocks as defined above."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.request.withHttpVerb

```ts
withHttpVerb(httpVerb)
```

"Which HTTP verb to use for the call. Options are 'GET', 'POST', 'PUT', 'PATCH', and 'DELETE'. Defaults to GET."

### fn spec.forProvider.request.withParseDependentRequestsEnabled

```ts
withParseDependentRequestsEnabled(parseDependentRequestsEnabled)
```

"Should the parsing of dependend requests be enabled? Defaults to true."

### fn spec.forProvider.request.withUrl

```ts
withUrl(url)
```

"The WebTest request URL."

## obj spec.forProvider.request.header

"One or more header blocks as defined above."

### fn spec.forProvider.request.header.withName

```ts
withName(name)
```

"The name which should be used for this Application Insights Standard WebTest. Changing this forces a new Application Insights Standard WebTest to be created."

### fn spec.forProvider.request.header.withValue

```ts
withValue(value)
```

"The value which should be used for a header in the request."

## obj spec.forProvider.resourceGroupNameRef

"Reference to a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.resourceGroupNameRef.policy

"Policies for referencing."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.resourceGroupNameSelector

"Selector for a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.resourceGroupNameSelector.policy

"Policies for selection."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.validationRules

"A validation_rules block as defined below."

### fn spec.forProvider.validationRules.withContent

```ts
withContent(content)
```

"A content block as defined above."

### fn spec.forProvider.validationRules.withContentMixin

```ts
withContentMixin(content)
```

"A content block as defined above."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.validationRules.withExpectedStatusCode

```ts
withExpectedStatusCode(expectedStatusCode)
```

"The expected status code of the response. Default is '200', '0' means 'response code < 400'"

### fn spec.forProvider.validationRules.withSslCertRemainingLifetime

```ts
withSslCertRemainingLifetime(sslCertRemainingLifetime)
```

"The number of days of SSL certificate validity remaining for the checked endpoint. If the certificate has a shorter remaining lifetime left, the test will fail. This number should be between 1 and 365."

### fn spec.forProvider.validationRules.withSslCheckEnabled

```ts
withSslCheckEnabled(sslCheckEnabled)
```

"Should the SSL check be enabled?"

## obj spec.forProvider.validationRules.content

"A content block as defined above."

### fn spec.forProvider.validationRules.content.withContentMatch

```ts
withContentMatch(contentMatch)
```

"A string value containing the content to match on."

### fn spec.forProvider.validationRules.content.withIgnoreCase

```ts
withIgnoreCase(ignoreCase)
```

"Ignore the casing in the content_match value."

### fn spec.forProvider.validationRules.content.withPassIfTextFound

```ts
withPassIfTextFound(passIfTextFound)
```

"If the content of content_match is found, pass the test. If set to false, the WebTest is failing if the content of content_match is found."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withApplicationInsightsId

```ts
withApplicationInsightsId(applicationInsightsId)
```

"The ID of the Application Insights instance on which the WebTest operates. Changing this forces a new Application Insights Standard WebTest to be created."

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"Purpose/user defined descriptive test for this WebTest."

### fn spec.initProvider.withEnabled

```ts
withEnabled(enabled)
```

"Should the WebTest be enabled?"

### fn spec.initProvider.withFrequency

```ts
withFrequency(frequency)
```

"Interval in seconds between test runs for this WebTest. Valid options are 300, 600 and 900. Defaults to 300."

### fn spec.initProvider.withGeoLocations

```ts
withGeoLocations(geoLocations)
```

"Specifies a list of where to physically run the tests from to give global coverage for accessibility of your application."

### fn spec.initProvider.withGeoLocationsMixin

```ts
withGeoLocationsMixin(geoLocations)
```

"Specifies a list of where to physically run the tests from to give global coverage for accessibility of your application."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withLocation

```ts
withLocation(location)
```

"The Azure Region where the Application Insights Standard WebTest should exist. Changing this forces a new Application Insights Standard WebTest to be created. It needs to correlate with location of the parent resource (azurerm_application_insights)"

### fn spec.initProvider.withRequest

```ts
withRequest(request)
```

"A request block as defined below."

### fn spec.initProvider.withRequestMixin

```ts
withRequestMixin(request)
```

"A request block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withRetryEnabled

```ts
withRetryEnabled(retryEnabled)
```

"Should the retry on WebTest failure be enabled?"

### fn spec.initProvider.withTags

```ts
withTags(tags)
```

"A mapping of tags which should be assigned to the Application Insights Standard WebTest."

### fn spec.initProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"A mapping of tags which should be assigned to the Application Insights Standard WebTest."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withTimeout

```ts
withTimeout(timeout)
```

"Seconds until this WebTest will timeout and fail. Default is 30."

### fn spec.initProvider.withValidationRules

```ts
withValidationRules(validationRules)
```

"A validation_rules block as defined below."

### fn spec.initProvider.withValidationRulesMixin

```ts
withValidationRulesMixin(validationRules)
```

"A validation_rules block as defined below."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.applicationInsightsIdRef

"Reference to a ApplicationInsights in insights to populate applicationInsightsId."

### fn spec.initProvider.applicationInsightsIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.applicationInsightsIdRef.policy

"Policies for referencing."

### fn spec.initProvider.applicationInsightsIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.applicationInsightsIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.applicationInsightsIdSelector

"Selector for a ApplicationInsights in insights to populate applicationInsightsId."

### fn spec.initProvider.applicationInsightsIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.applicationInsightsIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.applicationInsightsIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.applicationInsightsIdSelector.policy

"Policies for selection."

### fn spec.initProvider.applicationInsightsIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.applicationInsightsIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.request

"A request block as defined below."

### fn spec.initProvider.request.withBody

```ts
withBody(body)
```

"The WebTest request body."

### fn spec.initProvider.request.withFollowRedirectsEnabled

```ts
withFollowRedirectsEnabled(followRedirectsEnabled)
```

"Should the following of redirects be enabled? Defaults to true."

### fn spec.initProvider.request.withHeader

```ts
withHeader(header)
```

"One or more header blocks as defined above."

### fn spec.initProvider.request.withHeaderMixin

```ts
withHeaderMixin(header)
```

"One or more header blocks as defined above."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.request.withHttpVerb

```ts
withHttpVerb(httpVerb)
```

"Which HTTP verb to use for the call. Options are 'GET', 'POST', 'PUT', 'PATCH', and 'DELETE'. Defaults to GET."

### fn spec.initProvider.request.withParseDependentRequestsEnabled

```ts
withParseDependentRequestsEnabled(parseDependentRequestsEnabled)
```

"Should the parsing of dependend requests be enabled? Defaults to true."

### fn spec.initProvider.request.withUrl

```ts
withUrl(url)
```

"The WebTest request URL."

## obj spec.initProvider.request.header

"One or more header blocks as defined above."

### fn spec.initProvider.request.header.withName

```ts
withName(name)
```

"The name which should be used for this Application Insights Standard WebTest. Changing this forces a new Application Insights Standard WebTest to be created."

### fn spec.initProvider.request.header.withValue

```ts
withValue(value)
```

"The value which should be used for a header in the request."

## obj spec.initProvider.validationRules

"A validation_rules block as defined below."

### fn spec.initProvider.validationRules.withContent

```ts
withContent(content)
```

"A content block as defined above."

### fn spec.initProvider.validationRules.withContentMixin

```ts
withContentMixin(content)
```

"A content block as defined above."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.validationRules.withExpectedStatusCode

```ts
withExpectedStatusCode(expectedStatusCode)
```

"The expected status code of the response. Default is '200', '0' means 'response code < 400'"

### fn spec.initProvider.validationRules.withSslCertRemainingLifetime

```ts
withSslCertRemainingLifetime(sslCertRemainingLifetime)
```

"The number of days of SSL certificate validity remaining for the checked endpoint. If the certificate has a shorter remaining lifetime left, the test will fail. This number should be between 1 and 365."

### fn spec.initProvider.validationRules.withSslCheckEnabled

```ts
withSslCheckEnabled(sslCheckEnabled)
```

"Should the SSL check be enabled?"

## obj spec.initProvider.validationRules.content

"A content block as defined above."

### fn spec.initProvider.validationRules.content.withContentMatch

```ts
withContentMatch(contentMatch)
```

"A string value containing the content to match on."

### fn spec.initProvider.validationRules.content.withIgnoreCase

```ts
withIgnoreCase(ignoreCase)
```

"Ignore the casing in the content_match value."

### fn spec.initProvider.validationRules.content.withPassIfTextFound

```ts
withPassIfTextFound(passIfTextFound)
```

"If the content of content_match is found, pass the test. If set to false, the WebTest is failing if the content of content_match is found."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."